--- a/midisplit.1
+++ b/midisplit.1
@@ -58,6 +58,8 @@ Written by Christopher J. Rooney. Contact at christopher.j.rooney at that obscur
 .SH BUGS
 Only takes MIDI format 0 (single track) files as input.
 .SH COPYRIGHT
-Copyright © 2012 Christopher J. Rooney. License: Boost Software License, Version 1.0. <http://www.boost.org/LICENSE_1_0.txt> FSM approved. This is free software. There is no warranty. May create skynet.
+Copyright © 2012 Christopher J. Rooney. License: Boost Software License, Version 1.0. <http://www.boost.org/LICENSE_1_0.txt> 
+.P
+FSM approved. This is free software. There is no warranty. May create skynet.
 .SH SEE ALSO
 MIDI specification and resources available at <http://www.midi.org>
